--- a/src/recharge.html
+++ b/src/recharge.html
@@ -29,7 +29,7 @@
 		<div class="content recharge">
 			<div class="title">
 				<span class="text">微信支付</span>
-				<a class="record" href="#">充值记录</a>
+				<a class="record" href="rechargeRecord.html" target="_blank">充值记录</a>
 			</div>
 			<ul class="pay-type-wrap">
 				<li class="item active" data-paymethod="wx">
