--- a/src/withdraw.html
+++ b/src/withdraw.html
@@ -29,7 +29,7 @@
 		<div class="content withdraw">
 			<div class="title">
 				<span>提现到银行卡</span>
-				<a class="record" href="#">提现记录</a>
+				<a class="record" href="withdrawRecord.html"  target="_blank">提现记录</a>
 			</div>
 
 			<div class="form-wrap">
