--- a/src/recharge.html
+++ b/src/recharge.html
@@ -157,7 +157,7 @@
 	<!-- 支付模态框 END-->
 
 	<!-- 充值结果模态框 -->
-	<div class="yg-modal recg-result-modal">
+	<div class="yg-modal success-modal">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
