--- a/src/wdrRecordDetail.html
+++ b/src/wdrRecordDetail.html
@@ -24,20 +24,21 @@
 
 	<div class="container center-block record-detail">
 		<div class="step-pic">
-			<div class="item cur">
-				<div class="text">手机安全认证</div>
-				<div class="circle">1</div>
+			<div class="item cur completed">
+				<div class="text">发起提现申请</div>
+				<div class="circle"></div>
 			</div>
-			<div class="item">
-				<div class="text">请输入二级密码</div>
-				<div class="circle">2</div>
+			<div class="item cur ing">
+				<div class="text">银行处理中</div>
+				<div class="circle"></div>
 			</div>
-			<div class="item">
-				<div class="text">设置成功</div>
-				<div class="circle">3</div>
+			<div class="item not-start">
+				<div class="text">到账成功</div>
+				<div class="circle"></div>
 			</div>
 			<div class="bar"><span class="inline"></span></div>
 		</div>
+		<div class="estimate-time">预计09-26 18:42前到账</div>
 		<ul class="detail-list">
 			<li class="item">
 				<span class="label">单号</span>
