--- a/src/userBill.html
+++ b/src/userBill.html
@@ -11,10 +11,10 @@
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<link href="lib/Datepicker/css/date-font.css" rel="stylesheet">
 	<link href="lib/Datepicker/css/foundation-datepicker.min.css" rel="stylesheet">
-	<!-- build:css css/betRecord.css -->
+	<!-- build:css css/userBill.css -->
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/common.css" rel="stylesheet">
-	<link href="css/betRecord.css" rel="stylesheet">
+	<link href="css/userBill.css" rel="stylesheet">
 	<!-- endbuild -->
 
 	<!--[if lte IE 9]>
@@ -24,7 +24,7 @@
 
 <body>
 	@@include('include/header2.html')
-	<div class="container center-block bet-record">
+	<div class="container center-block user-bill">
 		<section class="main">
 			<div class="record-sidebar">
 				<ul>
@@ -48,13 +48,12 @@
 			<div class="content">
 				<div class="datepicker-group">
 					<div class="item">
-						<label>平台</label>
-						<select class="input-box" id="platform">
-							<option class="placeholder" value='' disabled selected style='display:none;'>选择平台</option>
-							<option value="1">全部</option>
-							<option value="2">欧博</option>
-							<option value="2">利鑫</option>
-							<option value="2">AG</option>
+						<label>游戏</label>
+						<select class="input-box" id="game">
+							<option class="placeholder" value='' disabled selected style='display:none;'>选择游戏</option>
+							<option value="1">百家乐</option>
+							<option value="2">牛牛</option>
+							<option value="3">三公</option>
 						</select>
 					</div>
 					<div class="item">
@@ -68,23 +67,6 @@
 					<button class="primary search">查询</button>
 				</div>
 				<div class="record">
-					<div class="top">
-						<div class="t-item">
-							<span class="label">平台</span><span>全部</span>
-						</div>
-						<div class="t-item">
-							<span class="label">查询时间</span><div><span class="st">开始时间：2018-12-26</span><span class="et">结束时间：2018-12-26</span></div>
-						</div>
-						<div class="t-item">
-							<span class="label">总投注</span><span>5,000,000.00</span>
-						</div>
-						<div class="t-item">
-							<span class="label">有效投注</span><span>1,481,000.00</span>
-						</div>
-						<div class="t-item">
-							<span class="label">输赢</span><span>6,000,000.00</span>
-						</div>
-					</div>
 					<ul class="r-list">
 						<li class="r-item">
 							<span class="game-type">视讯</span>
@@ -93,7 +75,7 @@
 								<div class="time">2018-12-26至2018-12-26</div>
 							</div>
 							<span class="amount">￥-50,000</span>
-							<a href="betDetail.html">详情</a>
+							<a href="billDetail.html">详情</a>
 						</li>
 						<li class="r-item">
 							<span class="game-type">视讯</span>
@@ -102,14 +84,14 @@
 								<div class="time">2018-12-26至2018-12-26</div>
 							</div>
 							<span class="amount">￥-50,000</span>
-							<a href="betDetail.html">详情</a>
+							<a href="billDetail.html">详情</a>
 						</li>
 					</ul>
+
+					<!-- 无记录 (无记录时显示)-->
+					<!-- <div class="no-record">暂无相关记录</div> -->
+					<!-- 无记录 END-->
 				</div>
-				
-				<!-- 无记录 (无记录时显示)-->
-				<!-- <div class="no-record">暂无相关记录</div> -->
-				<!-- 无记录 END-->
 			</div>
 		</section>
 
@@ -117,7 +99,7 @@
 	@@include('include/footer.html')
 	@@include('include/siteTool.html')
 
-	<!-- build:js js/betRecord.js -->
+	<!-- build:js js/userBill.js -->
 	<script src="lib/jquery.js"></script>
 	<script src="js/common.js"></script>
 	<!-- endbuild -->
@@ -125,7 +107,7 @@
 	<script src="lib/Datepicker/js/locales/foundation-datepicker.zh-CN.js"></script>
 
 	<script type="text/javascript">
-		var curTitle = '投注记录'
+		var curTitle = '财务账单'
 		$('#startTime').fdatepicker({
 			format: 'yyyy-mm-dd'
 		});
