--- a/src/index.html
+++ b/src/index.html
@@ -224,8 +224,8 @@
 						<div><input class="input pw" type="password" placeholder="密码" /></div>
 						<button class="primary btn">马上登陆</button>
 						<div class="btn-group">
-							<label class="remb" for="remb">
-								<input type="checkbox" id="remb" value="记住密码" />记住密码
+							<label class="remb" for="remb2">
+								<input type="checkbox" id="remb2" value="记住密码" />记住密码
 							</label>
 							<a href="#">忘记密码</a>
 						</div>
