--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
 	<div class="container center-block">
 		<section class="login-area">
-			<div class="item login">
+			<!-- <div class="item login">
 				<div class="title">永高用户登录</div>
 				<div><input class="input zh" type="text" placeholder="账号" /></div>
 				<div><input class="input pw" type="password" placeholder="密码" /></div>
@@ -59,7 +59,43 @@
 					</ul>
 					<a class="regist" href="#">免费注册</a>
 				</div>
+			</div> -->
+
+			<!-- 登录后 -->
+			<div class="item login-after">
+				<div class="led-user-wrap">
+					<img class="led-avater" src="img/userCenter/default.png" alt="">
+					<div class="info">
+						<div class="name-wrap">
+							<span class="name">尊敬的: 12122222221212</span>
+							<a href="boundPhone.html" class="icon tel"></a>
+							<a href="boundEmail.html" class="icon email"></a>
+						</div>
+						<div class="msg">
+							<a href="myinfo.html">消息<span class="num">(10)</span></a>
+							<span class="out">退出</span>
+						</div>
+					</div>
+				</div>
+				<div class="level-wrap">
+					<span class="level">LV.01</span>
+					<span class="progress"><i class="pg" data-pg="1"></i></span>
+				</div>
+				<div class="btn-group">
+					<a class="btn" href="userCenter.html">个人中心</a>
+					<a class="btn" href="recharge.html">充值中心</a>
+				</div>
+				<div class="user-play-g">
+					<div class="text">最近玩过的游戏</div>
+					<div class="p-g">
+						<img class="game-pic" src="" alt="">
+						<span class="game-name">真人视讯</span>
+						<a class="go" href="">进入游戏</a>
+					</div>
+				</div>
 			</div>
+			<!-- 登陆后 END -->
+
 			<div class="item">
 				<div class="pic-wrap">
 					<img src="img/index/lixin.png" width="284" height="174" />
@@ -96,7 +132,7 @@
 					<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
 				</div>
 			</div>
-	
+
 		</section>
 
 		<section class="trans-info-area">
@@ -286,7 +322,6 @@
 		</div>
 	</div>
 	<!-- 注册模态框 END-->
-
 	<!-- build:js js/index.js -->
 	<script src="lib/jquery.js"></script>
 	<script src="lib/swiper-4.4.6/dist/js/swiper.js"></script>
